# databricklings

./: .gitignore  CONTENT_GUIDE.md  README.md  pyproject.toml
content/: domains.yaml
content/lessons/: d02-l01-auto-loader-schema.yaml  d02-l02-file-discovery.yaml  d02-l03-copy-into-and-patterns.yaml  d04-l01-delta-sharing-shares-recipients.yaml  d04-l02-lakehouse-federation.yaml  d04-l03-marketplace-and-consuming-shares.yaml
content/questions/: d02.yaml  d04.yaml
scripts/: validate_content.py
src/databricklings/: __init__.py  app.py  content.py  fuzzy.py  leitner.py  models.py  progress.py  quiz.py  sampling.py  scoring.py  theme.tcss  widgets.py
src/databricklings/screens/: __init__.py  dashboard.py  learning.py  overlays.py  quiz_screen.py  stats.py
tests/: conftest.py  test_app.py  test_content.py  test_fuzzy.py  test_leitner.py  test_progress.py  test_sampling.py  test_scoring.py
